API Save con relaciones + Coverage al 100

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@janiscommerce/api-view": "^1.2.0",
     "@janiscommerce/model-controller": "^1.4.0",
+    "lodash": "^4.17.11",
     "superstruct": "^0.6.1"
   }
 }
