--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@janiscommerce/api-save",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "description": "A package to handle JANIS Views Save APIs",
   "main": "index.js",
   "scripts": {
@@ -18,10 +18,10 @@
   "license": "ISC",
   "homepage": "https://github.com/janis-commerce/api-save#readme",
   "devDependencies": {
-    "husky": "^2.4.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.17.3",
+    "husky": "^2.7.0",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "sinon": "^7.3.2"
@@ -33,9 +33,9 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api-view": "^1.2.0",
-    "@janiscommerce/model-controller": "^1.4.0",
-    "lodash": "^4.17.11",
+    "@janiscommerce/api-view": "^1.3.0",
+    "@janiscommerce/model": "^1.1.1",
+    "lodash": "^4.17.14",
     "superstruct": "^0.6.1"
   }
 }
