--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@janiscommerce/api-save",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "A package to handle JANIS Views Save APIs",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.18.2",
     "husky": "^2.7.0",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
@@ -33,9 +33,9 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api-view": "^1.3.0",
+    "@janiscommerce/api": "^3.1.1",
     "@janiscommerce/model": "^1.1.1",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "superstruct": "^0.6.1"
   }
 }
