--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@janiscommerce/api": "^3.1.1",
     "@janiscommerce/model": "^1.1.1",
-    "lodash": "^4.17.15",
+    "lodash.isequal": "^4.5.0",
     "superstruct": "^0.6.1"
   }
 }
