--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@janiscommerce/api-save",
   "version": "3.0.2",
   "description": "A package to handle JANIS Views Save APIs",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "export TEST_ENV=true; mocha --exit -R nyan --recursive tests/",
     "test-ci": "nyc --reporter=html --reporter=text mocha --recursive tests/",
     "watch-test": "export TEST_ENV=true; mocha --exit -R nyan -w --recursive tests/",
     "coverage": "nyc npm test",
-    "lint": "eslint index.js lib/ tests/"
+    "lint": "eslint lib/ tests/"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.18.2",
     "husky": "^2.7.0",
     "mocha": "^5.2.0",
+    "mock-require": "^3.0.3",
     "nyc": "^13.1.0",
     "sinon": "^7.3.2"
   },
@@ -33,8 +34,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api": "^3.1.1",
-    "@janiscommerce/model": "^1.1.1",
+    "@janiscommerce/api": "^4.1.1",
     "lodash.isequal": "^4.5.0",
     "superstruct": "^0.6.1"
   }
