--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@janiscommerce/api-save",
-  "version": "4.4.0",
-  "description": "A package to handle JANIS Views Save APIs",
+  "version": "4.4.1",
+  "description": "A package to handle JANIS Save APIs",
   "main": "lib/index.js",
   "scripts": {
     "test": "export TEST_ENV=true; mocha --exit -R nyan --recursive tests/",
@@ -34,7 +34,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api": "^4.2.3",
+    "@janiscommerce/api": "^4.2.4",
     "lodash.isequal": "^4.5.0",
     "superstruct": "0.6.2"
   }
