--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch-test": "export TEST_ENV=true; mocha --exit -R nyan -w --recursive tests/",
     "test-ci": "nyc --reporter=lcov --reporter=text-summary mocha --exit --recursive tests/",
     "coverage": "nyc npm test",
-    "lint": "eslint lib/ tests/"
+    "lint": "eslint lib/ tests/",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -18,14 +19,14 @@
   "license": "ISC",
   "homepage": "https://github.com/janis-commerce/api-save#readme",
   "devDependencies": {
-    "eslint": "^7.22.0",
+    "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.8",
-    "mocha": "^8.3.2",
+    "eslint-plugin-import": "^2.25.2",
+    "husky": "^7.0.2",
+    "mocha": "^9.1.3",
     "mock-require": "^3.0.3",
     "nyc": "^15.1.0",
-    "sinon": "^9.2.4"
+    "sinon": "^11.1.2"
   },
   "files": [
     "lib/"
@@ -34,7 +35,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@janiscommerce/api": "^6.2.1",
+    "@janiscommerce/api": "^6.3.0",
     "lodash.isequal": "4.5.0",
     "superstruct": "0.6.2"
   }
