--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test-ci": "nyc --reporter=lcov --reporter=text-summary mocha --exit --recursive tests/",
     "coverage": "nyc npm test",
     "lint": "eslint lib/ tests/",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build-types": "tsc lib/index.js --declaration --allowJs --emitDeclarationOnly --outDir types"
   },
   "repository": {
     "type": "git",
@@ -26,14 +27,17 @@
     "mocha": "^9.1.3",
     "mock-require": "^3.0.3",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.2"
+    "sinon": "^11.1.2",
+    "typescript": "^4.5.5"
   },
   "files": [
-    "lib/"
+    "lib/",
+    "types/"
   ],
   "directories": {
     "test": "tests"
   },
+  "types": "types/index.d.ts",
   "dependencies": {
     "@janiscommerce/api": "^6.3.0",
     "lodash.isequal": "4.5.0",
