--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.25.2",
-    "husky": "^7.0.2",
-    "mocha": "^9.1.3",
+    "husky": "^8.0.3",
+    "mocha": "^10.2.0",
     "mock-require": "^3.0.3",
     "nyc": "^15.1.0",
-    "sinon": "^11.1.2",
+    "sinon": "^15.0.3",
     "typescript": "^4.5.5"
   },
   "files": [
@@ -39,8 +39,8 @@
   },
   "types": "types/index.d.ts",
   "dependencies": {
-    "@janiscommerce/api": "^6.3.0",
-    "lodash.isequal": "4.5.0",
-    "superstruct": "0.6.2"
+    "@janiscommerce/api": "^7.0.0",
+    "@janiscommerce/superstruct": "^1.2.1",
+    "lodash.isequal": "4.5.0"
   }
 }
